[package]
name = "loopia_update_ip"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"
public-ip-addr = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio = "1"
tokio-cron-scheduler = "0.10"
xmlrpc = { version = "0.15", default-features = false, features = ["http"] }
